@startuml Auto

skinparam classAttributeIconSize 0
' skinparam monochrome true

package java {
    package util {
        class UUID
        interface List<T>
        class URI
    }

    package math {
        class BigDecimal
    }

    package time {
        class LocalDate
    }
}

package com.acme.auto.entity {
  class Reparatur <<entity>> {
    @Id
    @GeneratedValue
    UUID id
    String beschreibung
    LocalDate datum
    BigDecimal kosten
  }

  class Besitzer <<entity>> {
    @Id
    @GeneratedValue
    UUID id
    String vorname
    String nachname
  }

  enum MarkeType {
    VOLKSWAGEN
    MERCEDES
    FORD
    TESLA
  }

  enum FeatureType {
    AUTONOM
    SPORTMODUS
    DISPLAY
  }

  class Auto <<entity>> << @Entity >> << @Table >> {
    @Id
    @GeneratedValue
    UUID id
    @Version
    int version
    String name
    @Enumerated(String)
    MarkeType marke
    String kennzeichen
    int pferdeStaerke
    BigDecimal preis
    @Transient
    @UniqueElements
    List<FeatureType> features
    @Column
    String featuresStr
    Besitzer besitzer
    List<Reparatur> reparaturen
    @CreationTimestamp
    LocalDateTime createdAt
    @UpdateTimestamp
    LocalDateTime updatedAt
    String autohausName
    URI autohausHomepage
  }

  Auto *--> "1" Besitzer : @OneToOne \ besitzer
  Auto *--> "0..*" Reparatur : @OneToMany \ reparaturen

  Auto .up.> MarkeType
  Auto .up.> FeaturesType

  Auto ..> UUID
  Auto ..> BigDecimal
  Auto ..> List
  Auto ..> URI

  Besitzer ..> UUID

  Reparatur ..> UUID
  Reparatur ..> LocalDate
  Reparatur ..> BigDecimal
}

@enduml
